--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -19,10 +24,6 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.2",
-    "jwt-decode": "^4.0.0",
-    "moment-timezone": "^0.5.46",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
