--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts start",
+  "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.45"
   }
 }
