--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^11.5.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
@@ -26,13 +28,12 @@
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
- "scripts": {
-  "start": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts start",
-  "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-}
-,
+  "scripts": {
+    "start": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts start",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
